--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
     background-color: black;
 }
 .main{
-    background-color: yellow;
+  background: rgb(171,167,239);
+  background: linear-gradient(90deg, rgba(171,167,239,1) 2%, rgba(221,230,64,1) 17%, rgba(238,246,142,0.49933476808692223) 33%, rgba(46,216,216,0.6730042358740371) 64%, rgba(0,212,255,1) 99%);
     height: 383px;
 }
 .content{
@@ -24,7 +25,14 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 60px;
     padding: 20px;
-    color:darkgreen;
+      -webkit-text-stroke: 1px black;
+      color: white;
+      text-shadow:
+          3px 3px 0 #000,
+        -1px -1px 0 #000,  
+         1px -1px 0 #000,
+         -1px 1px 0 #000,
+          1px 1px 0 #000;
 }
 .content input{
 font-size: 30px;
@@ -166,14 +174,6 @@ padding: 10px;
     transform: translateX(0) rotate(360deg);
   }
 }
-#anim_3{
-  bottom: 0;
-  right: 0;
-}
-#anim_4{
-  left: 0;
-  bottom:0;
-}
 @media (max-width:468px){
   .content input{
     font-size: 20px;
@@ -183,10 +183,18 @@ padding: 10px;
     padding: 10px;
     }
   .content h1{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 40px;
     padding: 20px;
     color: black;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      -webkit-text-stroke: 1px black;
+      color: white;
+      text-shadow:
+          3px 3px 0 #000,
+        -1px -1px 0 #000,  
+         1px -1px 0 #000,
+         -1px 1px 0 #000,
+          1px 1px 0 #000;
 }
   .img{
     width: 100px;
@@ -221,10 +229,17 @@ padding: 10px;
     padding: 10px;
     }
   .content h1{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 30px;
     padding: 20px;
-    color: black;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      -webkit-text-stroke: 1px black;
+      color: white;
+      text-shadow:
+          3px 3px 0 #000,
+        -1px -1px 0 #000,  
+         1px -1px 0 #000,
+         -1px 1px 0 #000,
+          1px 1px 0 #000;
 }
   .img{
     width: 100px;
@@ -249,7 +264,7 @@ padding: 10px;
       transform: translateX(0) rotate(360deg);
     }
   }
- #main_img{
+  #main_img{
     width: 270px;
     height: 240px;
   }
