--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .main{
   background: rgb(171,167,239);
   background: linear-gradient(90deg, rgba(171,167,239,1) 2%, rgba(221,230,64,1) 17%, rgba(238,246,142,0.49933476808692223) 33%, rgba(46,216,216,0.6730042358740371) 64%, rgba(0,212,255,1) 99%);
-    height: 383px;
+    height: 100vh;  
 }
 .content{
     display: flex;
@@ -165,16 +165,19 @@ padding: 10px;
       transform: translateY(100%) rotate(90deg) ;
   }
   33%{
-    transform: translateX(650%) translateY(110%) rotate(180deg);
+    transform: translateX(620%) translateY(110%) rotate(180deg);
   }
   66%{
-    transform : translateX(650%) rotate(270deg);
+    transform : translateX(620%) rotate(270deg);
   }
   100%{
     transform: translateX(0) rotate(360deg);
   }
 }
 @media (max-width:468px){
+  .main{
+    height: 100vh;
+  }
   .content input{
     font-size: 20px;
     border-color: aqua;
@@ -223,6 +226,7 @@ padding: 10px;
 @media (max-width:430px){
   .content input{
     font-size: 20px;
+    margin-bottom: 30px;
     border-color: aqua;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     border-radius: 3px;
@@ -230,6 +234,8 @@ padding: 10px;
     }
   .content h1{
     font-size: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     padding: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       -webkit-text-stroke: 1px black;
@@ -267,5 +273,8 @@ padding: 10px;
   #main_img{
     width: 270px;
     height: 240px;
+  }
+  .main{
+    height: 100vh;
   }
 }
